# Gerenciador-De-Hoteis---UNB

./: .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  Data.cpp  Data.h  Doxyfile  README.md  atualizar_versao.cmake  main.cpp
coisas/testes/: Smoke_Tests.cpp  Smoke_Tests.h  Teste.cpp  Teste.h
coisas/utilitarios/: Data.cpp  Data.h  LinhaTSV.cpp  LinhaTSV.h  Servicos.cpp  Servicos.h  TextoApresentacao.cpp  TextoApresentacao.h
doc/: dominios.mmd  entidades.puml  logica_login.mmd
doc/html/: md__c_h_a_n_g_e_l_o_g.html  navtree.js  navtreedata.js  navtreeindex0.js
doc/latex/: md__c_h_a_n_g_e_l_o_g.tex  md__r_e_a_d_m_e.tex  refman.tex
docs/: depois_da_refatoracao.plantuml  diagrama.plantuml  diagrama_bonito.plantuml  diagrama_projeto.plantuml  diagrama_sub_sistema.plantuml  diagrama_testes.plantuml  representacao_quadro_professor.plantuml  teste de Modelagem.plantuml  teste.plantuml  teste@calebe.plantuml  teste_dois.plantuml  teste_quarto.plantuml  teste_quatro.plantuml  teste_tres.plantuml
docs/diagramas/: MAA.puml  Test_modulos.puml  atualizar_hotel.puml  criando_hotel.puml  diagrama_apresentacao.puml  diagrama_hospede.puml  diagrama_hotel.puml  diagrama_pessoal.puml  diagrama_quarto.puml  diagrama_reserva.puml  diagrama_todos.puml  dominios.mmd  dominios.puml  entidades.mmd  excluindo_hotel.puml  fluxo_autenticacao_login.puml  lendo_hotel.puml  modulos.puml  teste_migracao.puml  teste_migracao_B.puml
docs/html/: doxygen_crawl.html  index.html  md__r_e_a_d_m_e.html  pages.html
dominios/: Gerente.cpp  Gerente.h  Hospede.cpp  Hospede.h  Hotel.cpp  Hotel.h  Pessoa.cpp  Pessoa.h  Quarto.cpp  Quarto.h  Reserva.cpp  Reserva.h
dominios/d_cabecalho/: Gerente.h  Hospede.h  Hotel.h  Pessoa.h  Quarto.h  Reserva.h
dominios/d_corpo/: Gerente.cpp  Hospede.cpp  Hotel.cpp  Pessoa.cpp  Quarto.cpp  Reserva.cpp
include/Dominios/: Capacidade.h  Cartao.h  Codigo.h  Dinheiro.h  Email.h  Endereco.h  Nome.h  Numero.h  Ramal.h  Senha.h  Telefone.h
include/Entidades/: Gerente.h  Hospede.h  Hotel.h  Pessoa.h  Quarto.h  Reserva.h
include/HACKER/: SistemaHacker.hpp
include/dominios/: Capacidade.h  Cartao.h  Codigo.h  Data.h  Dinheiro.h  Email.h  Endereco.h  Gerente.h  Hospede.h  Hotel.h  Nome.h  Numero.h  Pessoa.h  Quarto.h  Ramal.h  Reserva.h  Senha.h  Telefone.h
include/entidades/: Gerente.h  Hospede.h  Hotel.h  Pessoa.h  Quarto.h  Reserva.h
include/sistema/: BancoDeDados.h  BancoDeDados.hpp  Servicos.h  Sistema.h  Sistema.hpp  SistemaHotel.h  Versao.hpp
include/utilitarios/: Data.h  LinhaTSV.h  SolicitacaoHospedagem.h  TextoApresentacao.h
include/validadoresAbstratos/: ValidarCodigo.h  ValidarDinheiro.h  ValidarEmail.h  ValidarEndereco.h  ValidarNome.h  ValidarRamal.h
include/validadoresPrincipais/: ValidarInt.h  ValidarString.h
include/validadores_abstratos/: ValidarCodigo.h  ValidarEmail.h  ValidarNome.h  ValidarRamal.h
include/validadores_principais/: ValidarInt.h  ValidarString.h
libs/IO/: IO.cpp  IO.hpp
libs/formato/: Formato.cpp  Formato.hpp
libs/io/: IO.cpp  IO.hpp
libs/menu/: ExibirMenu.cpp  ExibirMenu.hpp  Menu.cpp  Menu.hpp  MenuCRUD.cpp  MenuCRUD.hpp  MenuItem.cpp  MenuItem.hpp
libs/sqlite/: sqlite3.h
libs/tabela/: Atributo.cpp  Atributo.hpp  Linha.cpp  Linha.hpp  Tabela.cpp  Tabela.hpp  TamanhoAtributo.cpp  TamanhoAtributo.hpp
libs/teste/: InterfaceDeTestes.cpp  InterfaceDeTestes.hpp  SmokeTeste.cpp  SmokeTeste.hpp
libs/testes/: Teste.cpp  Teste.h
meta/: atualizar_versao.cmake
src/: main.cpp
src/Dominios/: Capacidade.cpp  Cartao.cpp  Codigo.cpp  Dinheiro.cpp  Email.cpp  Endereco.cpp  Nome.cpp  Numero.cpp  Ramal.cpp  Senha.cpp  Telefone.cpp
src/Entidades/: Gerente.cpp  Hospede.cpp  Hotel.cpp  Pessoa.cpp  Quarto.cpp  Reserva.cpp
src/HACKER/: SistemaHacker.cpp
src/dominios/: Capacidade.cpp  Cartao.cpp  Codigo.cpp  Data.cpp  Dinheiro.cpp  Email.cpp  Endereco.cpp  Gerente.cpp  Hospede.cpp  Hotel.cpp  Nome.cpp  Numero.cpp  Pessoa.cpp  Quarto.cpp  Ramal.cpp  Reserva.cpp  Senha.cpp  Telefone.cpp
src/entidades/: Gerente.cpp  Hospede.cpp  Pessoa.cpp
src/sistema/: BancoDeDados.cpp  Servicos.cpp  Sistema.cpp  SistemaHotel.cpp  Versao.cpp
src/utilitarios/: Data.cpp  GeradorCodigo.cpp  LinhaTSV.cpp  Menu.cpp  MenuItem.cpp  PersistenciaSolicitacaoHospedagem.cpp  TextoApresentacao.cpp
src/validadoresAbstratos/: ValidarCodigo.cpp  ValidarDinheiro.cpp  ValidarEmail.cpp  ValidarEndereco.cpp  ValidarNome.cpp  ValidarRamal.cpp
src/validadoresPrincipais/: ValidarInt.cpp  ValidarString.cpp
src/validadores_abstratos/: ValidarCodigo.cpp  ValidarDinheiro.cpp  ValidarEmail.cpp  ValidarEndereco.cpp  ValidarNome.cpp  ValidarRamal.cpp
src/validadores_principais/: ValidarInt.cpp  ValidarString.cpp
testes/: Smoke_Tests.cpp  Smoke_Tests.h  TestandoSmoke.cpp  TestandoSmoke.hpp  Teste.cpp  Teste.h  TestesValidates.cpp  TestesValidates.h  testes_validadores.cpp  testes_validadores.h
testes/interface_testes/: InterfaceDeTestes.cpp  InterfaceDeTestes.hpp
testes/smoke_teste/: SmokeTeste.cpp  SmokeTeste.hpp  TestandoSmoke.cpp  TestandoSmoke.hpp
testes/testes_dominios/: TesteCapacidade.cpp  TesteCapacidade.hpp  TesteCartao.cpp  TesteCartao.hpp  TesteCodigo.cpp  TesteCodigo.hpp  TesteDinheiro.cpp  TesteDinheiro.hpp  TesteEmail.cpp  TesteEmail.hpp  TesteEndereco.cpp  TesteEndereco.hpp  TesteNome.cpp  TesteNome.hpp  TesteNumero.cpp  TesteNumero.hpp  TesteRamal.cpp  TesteRamal.hpp  TesteSenha.cpp  TesteSenha.hpp  TesteTelefone.cpp  TesteTelefone.hpp  TestesData.cpp  TestesData.hpp
testes/testes_entidades/: TesteGerente.cpp  TesteGerente.hpp  TesteHospede.cpp  TesteHospede.hpp  TesteHotel.cpp  TesteHotel.hpp  TesteQuarto.cpp  TesteQuarto.hpp  TesteReserva.cpp  TesteReserva.hpp
validadores/: ValidarCodigo.cpp  ValidarCodigo.h  ValidarDinheiro.cpp  ValidarDinheiro.h  ValidarDouble.cpp  ValidarDouble.h  ValidarEmail.cpp  ValidarEmail.h  ValidarEndereco.cpp  ValidarEndereco.h  ValidarInt.cpp  ValidarInt.h  ValidarNome.cpp  ValidarNome.h  ValidarRamal.cpp  ValidarRamal.h  ValidarString.cpp  ValidarString.h
validadores/testes/: Teste.h
(+583 files in other folders)
